log
Thu 20 Apr 2023 04:33:33 PM UTC: 
 tests:  1|8
total_score: 0/70
d5075c2
Thu 20 Apr 2023 04:59:31 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
17a6fdb
Thu 20 Apr 2023 05:09:45 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  11|6
total_score: 15/70
b014da5
Thu 20 Apr 2023 05:33:30 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  11|6
total_score: 15/70
fc0ce7c
Fri 21 Apr 2023 11:49:32 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
6c9b03d
Sat 22 Apr 2023 12:01:46 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
91c1ff4
Sat 22 Apr 2023 12:04:20 AM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
729d42a
Sat 22 Apr 2023 12:11:44 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
6d4f053
Sat 22 Apr 2023 12:13:20 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
96b756e
Sat 22 Apr 2023 12:14:45 AM UTC: 
 treemap.c | 21 +++++++++++----------
 1 file changed, 11 insertions(+), 10 deletions(-)
 tests:  11|6
total_score: 15/70
287aa5c
Sat 22 Apr 2023 12:25:45 AM UTC: 
 treemap.c | 19 +++++--------------
 1 file changed, 5 insertions(+), 14 deletions(-)
 tests:  11|6
total_score: 15/70
e4ab881
Sat 22 Apr 2023 02:27:01 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:13: error: unused variable ‘parent’ [-Werror=unused-variable]
   63 |   TreeNode *parent = NULL;
      |             ^~~~~~
treemap.c:62:13: error: unused variable ‘current’ [-Werror=unused-variable]
   62 |   TreeNode *current = tree->root;
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
db46e5f
Sat 22 Apr 2023 02:27:14 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|6
total_score: 15/70
fba4647
Sat 22 Apr 2023 02:29:42 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
08d9a2a
Sat 22 Apr 2023 02:34:08 AM UTC: 
 treemap.c | 32 +++++++++++++-------------------
 1 file changed, 13 insertions(+), 19 deletions(-)
 tests:  0|0
22ee079
Sat 22 Apr 2023 02:34:39 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
07b7182
Sat 22 Apr 2023 02:35:50 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f14be8b
Sat 22 Apr 2023 02:37:42 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
e39445a
Sat 22 Apr 2023 02:39:31 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b96aef6
Sat 22 Apr 2023 02:47:20 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  13|5
total_score: 25/70
11c9647
Sat 22 Apr 2023 02:49:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
6d31bd5
Sat 22 Apr 2023 02:49:15 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
539694d
Sat 22 Apr 2023 02:53:15 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
fc8d554
Sat 22 Apr 2023 02:53:50 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
2beb316
Sat 22 Apr 2023 03:30:49 AM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:95:61: error: statement with no effect [-Werror=unused-value]
   95 |     else if (node == node->parent->left) node->parent->left == NULL;
      |                                                             ^
cc1: all warnings being treated as errors
Compilation failed
0302b5f
Sat 22 Apr 2023 03:31:44 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
04ca76a
Sat 22 Apr 2023 03:34:28 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
2b988f7
Sat 22 Apr 2023 03:36:31 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  18|3
total_score: 40/70
7d3a23b
Sun 23 Apr 2023 12:44:53 AM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|0
fd2f9b3
Sun 23 Apr 2023 12:45:22 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
741df5c
Sun 23 Apr 2023 01:11:17 AM UTC: 
 treemap.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
 tests:  0|0
04c4c97
Sun 23 Apr 2023 01:11:31 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:197:17: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  197 |   return current->left;
      |          ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bd5aef3
Sun 23 Apr 2023 01:11:43 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
96287af
Sun 23 Apr 2023 01:12:51 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
6d9cb19
Sun 23 Apr 2023 01:47:03 AM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:198:10: error: expected expression before ‘if’
  198 |   return if(current != NULL) current->pair : NULL;
      |          ^~
treemap.c:199:1: error: control reaches end of non-void function [-Werror=return-type]
  199 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a2fe180
Sun 23 Apr 2023 01:47:22 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:198:19: error: returning ‘int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
  198 |   return (current != NULL) current->pair : NULL;
      |          ~~~~~~~~~^~~~~~~~
treemap.c:198:27: error: expected ‘;’ before ‘current’
  198 |   return (current != NULL) current->pair : NULL;
      |                           ^~~~~~~~
      |                           ;
cc1: all warnings being treated as errors
Compilation failed
68b810d
Sun 23 Apr 2023 01:49:02 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  25|1
total_score: 60/70
af7ae88
Sun 23 Apr 2023 01:53:14 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  25|1
total_score: 60/70
d53f03f
Sun 23 Apr 2023 02:00:31 AM UTC: 
 treemap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  29|0
total_score: 70/70
970613d
